# MLOPS-automated-Ai-training

./: CANARY_DEPLOYMENT.md  README.md  demo_canary.py  mermaid_charts.md  project_presentation.tex  project_presentation_short.tex  project_report.tex  pyproject.toml  requirements.txt  serve_locally.py  serve_model.bat  web_interface.html
airflow/config/: airflow.cfg
airflow/dags/: continuous_training_dag.py  data_pipeline_dag.py  deployment_dag.py
configs/: accelerate_config.yaml  deployment_config.yaml  training_config.yaml
data/processed/test/: test.parquet
data/processed/training/: train.parquet
data/processed/validation/: val.parquet
data/raw/: interactions.csv  jobs.csv  users.csv
docker/: Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.serving  Dockerfile.training  docker-compose.yml
scripts/: setup_environment.sh  start_training.sh
src/checkpoints/best_model/: model.pt  training_state.pt
src/data/: __init__.py  ingestion.py  preprocessing.py  validation.py
src/deployment/: __init__.py  canary.py  serving.py  shadow.py  simple_serving.py
src/registry/: __init__.py  mlflow_client.py  model_promotion.py
src/training/: __init__.py  distributed_train.py  evaluation.py  models.py  trainer.py
src/utils/: __init__.py  config.py  logging_utils.py  monitoring.py
tests/: test_pipeline.py
